Added comments and size attritubes to img elements

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,7 @@
 
     <body>
         <h1>About Page</h1>
+        <!-- relative link with a alt text.  -->
         <img src="../images/dog.jpg" alt="photo of a pug">
 
     </body>
