--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
         <h1>Homepage</h1>
         <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">click me</a>
         <p> </p>
+        <!-- a anchor element to point to a relative link -->
         <a href="./pages/about.html">About</a>
         <p></p>
 
-        <img src="https://www.theodinproject.com/mstile-310x310.png">
+        <!-- image element with attributes : src and alt -->
+        <!-- full image with absolute/external link, height, width, and alternate text -->
+        <img src="https://www.theodinproject.com/mstile-310x310.png" alt="the odin project logo" height="310" width="310">
         
     </body>
 
