--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
     <body>
         <h1>About Page</h1>
         <!-- relative link with a alt text.  -->
-        <img src="../images/dog.jpg" alt="photo of a pug">
+        <img src="../images/dog.jpg" alt="photo of a pug" height="310" width="320">
 
     </body>
 
